initial commit, added scss support

--- a/src/app/page.module.scss
+++ b/src/app/page.module.scss
@@ -34,6 +34,16 @@
   border-radius: var(--border-radius);
 }
 
+/* Inserted code block */
+.main {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  padding: 6rem;
+  min-height: 100vh;
+}
+
 .code {
   font-weight: 700;
   font-family: var(--font-mono);
