--- a/src/components/Quiz/QuizHeader/QuizHeader.module.scss
+++ b/src/components/Quiz/QuizHeader/QuizHeader.module.scss
@@ -1,13 +1,24 @@
 @import "utils";
 
 .header {
-  height: $header-height;
-  padding: 10px 15px;
-
   display: flex;
-  align-items: center;
   justify-content: space-between;
+  align-items: center;
 
+  height: $header-height;
   max-width: 1100px;
   margin: 0 auto;
+  padding: 10px 15px;
+
+  position: relative;
+}
+
+.icon {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%);
 }
