--- a/src/components/Quiz/QuestionTitle/QuestionTitle.module.scss
+++ b/src/components/Quiz/QuestionTitle/QuestionTitle.module.scss
@@ -1,3 +1,17 @@
+.wrapper {
+  max-width: 330px;
+  margin: 0 auto;
+}
+
 .title {
-  margin: 20px 0 30px;
+  margin-top: 20px;
+}
+
+.subtitle {
+  margin-top: 30px;
+}
+
+.withSubtitle {
+  text-align: center;
+  margin-bottom: 30px;
 }
