--- a/src/components/common/Button/Button.module.scss
+++ b/src/components/common/Button/Button.module.scss
@@ -1,21 +1,23 @@
 @import "utils";
 
 .button {
-  padding: 0;
-  font-size: 14px;
+  min-height: 64px;
+  min-width: 330px;
+  padding: 12px 20px;
+  
+  border-radius: 16px;
 
+  font-size: 14px;
+  line-height: 19px;
+  
   color: $c-text-button;
+  
   cursor: pointer;
   text-decoration: none;
 }
 
 .button.primary {
-  height: 64px;
-  min-width: 330px;
-  padding: 12px 20px;
-
   border: 1px solid $c-border;
-  border-radius: 16px;
 
   background-color: $c-bg-button;
   box-shadow: 2px 2px 6px 0px $c-shadow;
@@ -29,5 +31,19 @@
 .button.transparent {
   height: 24px;
   background-color: transparent;
+
+  min-height: initial;
+  min-width: initial;
+  padding: initial;
   border: none;
+}
+
+.button.inverted {
+  display: inline-block;
+  font-size: 18px;
+  line-height: 40px;
+
+  background-color: $c-bg-button-inverse;
+  color: $c-text-button-inverse;
+  box-shadow: 0px 4px 4px 0px $c-shadow-inverse;
 }
