--- a/src/style/scss/colors.scss
+++ b/src/style/scss/colors.scss
@@ -1,8 +1,11 @@
 $c-bg-neutral: #FFF0F0;
 $c-border: #E0E0E0;
 $c-bg-button: #EAEEF7;
+$c-bg-button-inverse: #FBFBFF;
+$c-text-button-inverse: #6A3AA2;
+$c-text-inverse: #FBFBFF;
 $c-text-button: #201F1F;
 $c-shadow: #543C9740;
+$c-shadow-inverse: #D8D6D640;
 
 $gradient-stellar: linear-gradient(165.54deg, #141333 -33.39%, #202261 15.89%, #543C97 55.84%, #6939A2 74.96%);
-
